--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=dpg-cvcuan9u0jms739iavig-a.oregon-postgres.render.com;Port=5432;Database=my_postgresql_stno;Username=my_postgresql_stno_user;Password=0brEbLrRBAMI16Lggdl4aeZ1pf1YbJmN;SSL Mode=Require;Trust Server Certificate=true;"
+        "DefaultConnection": "Host=ep-shy-fog-a9mzxt8k-pooler.gwc.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_ImDzG2WxK6Ue;SSL Mode=Require;Trust Server Certificate=true;" 
+            //Host=dpg-cvcuan9u0jms739iavig-a.oregon-postgres.render.com;Port=5432;Database=my_postgresql_stno;Username=my_postgresql_stno_user;Password=0brEbLrRBAMI16Lggdl4aeZ1pf1YbJmN
     },
   "Logging": {
     "LogLevel": {
