--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,6 @@ services:
       - key: ASPNETCORE_ENVIRONMENT
         value: Production
       - key: DATABASE_URL
-        value: "Host=dpg-cvcuan9u0jms739iavig-a.oregon-postgres.render.com;Port=5432;Database=my_postgresql_stno;Username=my_postgresql_stno_user;Password=0brEbLrRBAMI16Lggdl4aeZ1pf1YbJmN;SSL Mode=Require;Trust Server Certificate=true;"
+        value: "Host=ep-shy-fog-a9mzxt8k-pooler.gwc.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_ImDzG2WxK6Ue;SSL Mode=Require;Trust Server Certificate=true;"
     healthCheckPath: /
     startCommand: "dotnet Api.dll"
