--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,9 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=ep-shy-fog-a9mzxt8k-pooler.gwc.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_ImDzG2WxK6Ue;SSL Mode=Require;Trust Server Certificate=true;" 
-            //Host=dpg-cvcuan9u0jms739iavig-a.oregon-postgres.render.com;Port=5432;Database=my_postgresql_stno;Username=my_postgresql_stno_user;Password=0brEbLrRBAMI16Lggdl4aeZ1pf1YbJmN
+        "DefaultConnection": "Host=ep-purple-firefly-a289919a.eu-central-1.pg.koyeb.app;Port=5432;Database=koyebdb;Username=galabot-adm;Password=npg_6MEq5txbzkDF;SSL Mode=Require;Trust Server Certificate=true;"
+        //Host=dpg-cvcuan9u0jms739iavig-a.oregon-postgres.render.com;Port=5432;Database=my_postgresql_stno;Username=my_postgresql_stno_user;Password=0brEbLrRBAMI16Lggdl4aeZ1pf1YbJmN
+        //Host=ep-purple-firefly-a289919a.eu-central-1.pg.koyeb.app;Port=5432;Database=koyebdb;Username=galabot-adm;Password=npg_6MEq5txbzkDF
+        //Host=ep-shy-fog-a9mzxt8k-pooler.gwc.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_ImDzG2WxK6Ue
     },
   "Logging": {
     "LogLevel": {
